Closed Bug 1825759 Opened 2 years ago Closed 2 years ago

Perma Late beta bustage /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:243:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH' when Gecko 113 switches to Late Beta on 2023-04-21

Categories

(Core :: Audio/Video: GMP, defect, P1)

defect

Tracking

()

VERIFIED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- unaffected
firefox113 blocking verified

People

(Reporter: noriszfay, Assigned: aosmond)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Central-as-beta simulation

How to run these simulations

Failure log:

[task 2023-03-31T11:04:24.352Z] 11:04:24     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/gmp'
[task 2023-03-31T11:04:24.354Z] 11:04:24     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-i686-linux-gnu -Qunused-arguments -std=gnu++17 -m32 -o Unified_cpp_dom_media_gmp0.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/media/gmp -I/builds/worker/workspace/obj-build/dom/media/gmp -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/security/sandbox/chromium -I/builds/worker/checkouts/gecko/security/sandbox/chromium-shim -I/builds/worker/checkouts/gecko/dom/media/webrtc/transport -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/checkouts/gecko/xpcom/build -I/builds/worker/checkouts/gecko/xpcom/threads -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fomit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off -DNS_FREE_PERMANENT_DATA=1 -fprofile-generate -MD -MP -MF .deps/Unified_cpp_dom_media_gmp0.o.pp   Unified_cpp_dom_media_gmp0.cpp
[task 2023-03-31T11:04:24.354Z] 11:04:24     INFO -  In file included from Unified_cpp_dom_media_gmp0.cpp:65:
[task 2023-03-31T11:04:24.354Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:243:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.354Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to create file for plugin path");
[task 2023-03-31T11:04:24.354Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.355Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:250:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.355Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to get parent file for plugin file");
[task 2023-03-31T11:04:24.355Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.355Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:257:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.355Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to get leaf for plugin file");
[task 2023-03-31T11:04:24.355Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.356Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:275:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.356Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to append lib to plugin file");
[task 2023-03-31T11:04:24.356Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.356Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:284:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.356Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to normalize plugin file");
[task 2023-03-31T11:04:24.356Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.357Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:289:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.357Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to resolve links in plugin file");
[task 2023-03-31T11:04:24.357Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.357Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:294:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.357Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Plugin file does not exist");
[task 2023-03-31T11:04:24.357Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.358Z] 11:04:24    ERROR -  /builds/worker/checkouts/gecko/dom/media/gmp/GMPChild.cpp:301:5: error: use of undeclared identifier 'GMP_DIAGNOSTIC_CRASH'
[task 2023-03-31T11:04:24.358Z] 11:04:24     INFO -      GMP_DIAGNOSTIC_CRASH("Failed to get path for plugin file");
[task 2023-03-31T11:04:24.358Z] 11:04:24     INFO -      ^
[task 2023-03-31T11:04:24.358Z] 11:04:24     INFO -  8 errors generated.
[task 2023-03-31T11:04:24.358Z] 11:04:24    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: Unified_cpp_dom_media_gmp0.o] Error 1
[task 2023-03-31T11:04:24.358Z] 11:04:24     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/media/gmp'
Flags: needinfo?(aosmond)
Severity: -- → S2
Priority: -- → P1

I will fix this tomorrow.

Assignee: nobody → aosmond

I'm going to convert this to a regular MOZ_CRASH because were crashing anyways in the wild via a signature (GMPChild::ProcessingError) and it appears nightly and release have different pathways to this.

Flags: needinfo?(aosmond)

This patch updates the crash from a diagnostic assert to always
crashing. This will help us diagnose the root cause existing GMP plugin
process crashes in beta/release. Today it always crashes, just slightly
later, and with less useful information.

This also fixes a nightly to beta build error.

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/048a94496e4f Update GMPChild::GetUTF8LibPath crash assertions. r=media-playback-reviewers,azebrowski
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch

Verified fixed in today's beta-sim

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: