Bug 1825759 - Update GMPChild::GetUTF8LibPath crash assertions. r=media-playback-reviewers,azebrowski

This patch updates the crash from a diagnostic assert to always
crashing. This will help us diagnose the root cause existing GMP plugin
process crashes in beta/release. Today it always crashes, just slightly
later, and with less useful information.

This also fixes a nightly to beta build error.

Differential Revision: https://phabricator.services.mozilla.com/D174479